<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.5</version>
        <relativePath/> <!-- lookup parent from repository -->
    </parent>

    <groupId>com.crishof</groupId>
    <artifactId>microservices</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>pom</packaging>
    <name>StockSuite</name>
    <description>Web app for commercial management and administration</description>

    <properties>
        <spring-cloud.version>2023.0.1</spring-cloud.version>
        <java.version>17</java.version>
    </properties>

    <modules>
        <module>address-sv</module>
        <module>api-gateway</module>
        <module>brand-sv</module>
        <module>category-sv</module>
        <module>config-server</module>
        <module>customer-sv</module>
        <module>dimension-sv</module>
        <module>eureka-sv</module>
        <module>image-sv</module>
        <module>invoice-sv</module>
        <module>mailSender-sv</module>
        <module>price-sv</module>
        <module>product-sv</module>
        <module>stock-sv</module>
        <module>supplier-sv</module>
        <module>supplierPriceList-sv</module>
        <module>user-sv</module>


    </modules>

    <dependencies>

    </dependencies>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.cloud</groupId>
                <artifactId>spring-cloud-dependencies</artifactId>
                <version>${spring-cloud.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>

        </plugins>
    </build>

</project>
